syntax = "proto2";

package com.google.sps.protoc;

option java_outer_classname = "JoinProtoc";

message JoinRequest {
  required string roomId = 1;
}

message JoinResponse {
  required string roomId = 1;
  required uint64 timestamp = 2;
}
